--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -143,7 +143,6 @@ Mit freundlichen Grüßen
               in einer separaten E-Mail an <em>webmaster(at)muc-mib.de</em>.
             </p>
           </fieldset>
-
           <fieldset>
             <legend>Versand &amp; Benachrichtigung</legend>
             <div class="shipbox">
@@ -171,8 +170,8 @@ Mit freundlichen Grüßen
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> ·
-        <a href="Impressum.html">Impressum</a> ·
+        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a> · 
+        <a href="Impressum.html">Impressum</a> · 
         <a href="Datenschutz.html">Datenschutz</a>
       </nav>
     </footer>
@@ -189,7 +188,7 @@ Mit freundlichen Grüßen
     const norm=t=>String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s-]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
 
     const female=new Set(['anna','sabine','ursula','katrin','claudia','renate','petra','britta','heike','stefanie','julia','christine','lisa','marie','monika','andrea','martina','sandra','nicole','angelika','eva','kathrin','karin','bettina','svenja','ricarda']);
-    const male  =new Set(['hans','peter','wolfgang','thomas','michael','stefan','andreas','markus','martin','frank','jürgen','klaus','christian','alexander','lars','tobias','sebastian','uwe','ulrich','paul','max','jan']);
+    const male =new Set(['hans','peter','wolfgang','thomas','michael','stefan','andreas','markus','martin','frank','jürgen','klaus','christian','alexander','lars','tobias','sebastian','uwe','ulrich','paul','max','jan']);
 
     function splitName(full){ let s=(full||'').replace(/\b(Dr\.?|Prof\.?|MdB)\b/gi,'').replace(/\s+/g,' ').trim(); const p=s.split(' '); return {first:p[0]||'', last:p[p.length-1]||'', raw:s}; }
     function guessGender(first){ const f=(first||'').toLowerCase(); if(female.has(f))return'f'; if(male.has(f))return'm'; return null; }
@@ -227,7 +226,6 @@ Mit freundlichen Grüßen
       }
       return { candidates:[...byName.values()], wks };
     }
-
     // ---- Adresse normalisieren: "Deutscher Bundestag" sicher einfügen ----
     function normalizeBtAddr(addr){
       const lines=String(addr||'').split('\n').map(s=>s.trim()).filter(Boolean);
@@ -348,7 +346,17 @@ Mit freundlichen Grüßen
       return out.replace(/\n{3,}/g,'\n\n').trimEnd();
     }
 
-    // Live-Vorschau nur für Absenderblock
+    // ➕ Neue Funktion: Komprimiert Text fürs PDF
+    function compactForPdf(str){
+      let s = String(str||'').replace(/\r\n?/g,'\n');
+      s = s.replace(/[ \t]+\n/g,'\n');
+      s = s.replace(/\n{3,}/g,'\n\n');
+      s = s.replace(/\n\n+/g,'\n');
+      s = s.replace(/[ \t]{2,}/g,' ');
+      s = s.replace(/^\n+|\n+$/g,'');
+      return s;
+    }
+
     const TOKENS=['{Vorname}','{Nachname}','{Straße}','{PLZ}','{Ort}'];
     function renderSenderPreview(){
       if(!msg) return;
@@ -372,7 +380,6 @@ Mit freundlichen Grüßen
         .replace('{MdB_Adresse}', raddr);
 
       const finalMsg = apply(userText, vals());
-
       if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(finalMsg)) {
         alert('Bitte füllen Sie Absenderfelder vollständig aus.');
         return;
@@ -386,7 +393,9 @@ Mit freundlichen Grüßen
       fd.forEach((v,k)=>payload[k]=v);
       payload.copy_to_self  = fd.has('copy_to_self');
       payload.consent_print = fd.has('consent_print');
-      payload.message       = finalMsg;
+
+      // ✅ neu: komprimierte Version des Brieftexts
+      payload.message = compactForPdf(finalMsg);
 
       try{
         const res=await fetch(form.action,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
@@ -411,12 +420,10 @@ Mit freundlichen Grüßen
   <!-- --- Fit-to-one-page: JS (nur für Browser-Druck/„Als PDF speichern“) --- -->
   <script>
   (function(){
-    // A4 nutzbare Höhe (in mm) = Seitenhöhe - obere/untere Ränder (müssen zu @page passen)
     const mmToPx = mm => mm * (96 / 25.4);
     const PAGE_H_MM = 297, M_TOP_MM = 18, M_BOTTOM_MM = 18;
     const PRINTABLE_PX = mmToPx(PAGE_H_MM - M_TOP_MM - M_BOTTOM_MM);
 
-    // Erzeuge bei Bedarf eine temporäre Druck-Vorschau aus dem Textarea-Inhalt
     function ensurePreview() {
       let box = document.getElementById('printPreviewBox');
       if (box) return box;
@@ -425,7 +432,7 @@ Mit freundlichen Grüßen
       box.style.position = 'fixed';
       box.style.top = '-10000px';
       box.style.left = '0';
-      box.style.width = (mmToPx(210 - 22 - 18)) + 'px'; // A4 Breite minus Ränder (22mm links, 18mm rechts wie @page)
+      box.style.width = (mmToPx(210 - 22 - 18)) + 'px';
       document.body.appendChild(box);
 
       const inner = document.createElement('div');
@@ -443,16 +450,14 @@ Mit freundlichen Grüßen
       const inner = document.getElementById('printLetter');
       if (!ta || !inner) return;
       inner.textContent = ta.value || '';
-      // Grundlinienhöhe leicht verdichten, ohne Inhalt zu verändern
       inner.style.lineHeight = '1.4';
       inner.style.fontSize = '16px';
-      // Messen & ggf. skalieren
       inner.style.transform = '';
       inner.style.height = '';
       const h = inner.scrollHeight;
       if (h > PRINTABLE_PX) {
         let scale = Math.min(1, PRINTABLE_PX / h);
-        if (scale < 0.88) scale = 0.88; // Lesbarkeitsuntergrenze
+        if (scale < 0.88) scale = 0.88;
         inner.style.transform = 'scale(' + scale + ')';
         inner.style.height = (h * scale) + 'px';
       }
@@ -463,14 +468,12 @@ Mit freundlichen Grüßen
       updatePreview();
     }
 
-    // Aktualisiere Vorschau bei Eingaben, aber nur wenn sie existiert
     ['input','change','keyup'].forEach(ev=>{
       document.getElementById('message')?.addEventListener(ev, () => {
         if (document.getElementById('printLetter')) updatePreview();
       });
     });
 
-    // Hooks für Druck
     const mq = window.matchMedia && window.matchMedia('print');
     if (mq && mq.addEventListener) {
       mq.addEventListener('change', e => { if (e.matches) beforePrint(); });
@@ -482,23 +485,3 @@ Mit freundlichen Grüßen
   <!-- --- Ende Zusatz --- -->
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
