--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -356,8 +356,9 @@ Mit freundlichen Grüßen
   <script type="module">
     async function loadJSON(p){ return fetch(p,{cache:'no-store'}).then(r=>r.json()); }
 
-    const byState = await loadJSON('/data/mdb_by_state.json');
-    const byParty = await loadJSON('/data/mdb_by_party.json');
+    const byState = await loadJSON('assets/data/mdb_by_state.json');
+    const byParty = await loadJSON('assets/data/mdb_by_party.json');
+
     let extras = [];
     try { extras = await loadJSON('/data/mdb_extras.json'); } catch { extras = []; }
 
@@ -547,6 +548,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
